2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.in:
	* gtkdoc-check:
	* gtkdoc-check.in:
	  Replacing my shell based test script by Davids perl based one. Add
	  licence, copyright and docs header. Integrate with build.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scangobj.in:
	  Make introspection of interfaces work in more cases. Fixes #355352.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* configure.in:
	  Cleanup glib detection for tests.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-check:
	  Fix modulename check.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Install new makefile.

	* configure.in:
	  Bump version as we're working on 1.9.

	* gtkdocize.in:
	  Add option to select makefile-flavour.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	  Add dummy rule to make first build run through. Fixes #156643

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Hide fixed navigationbar when printing. Fixes #449618

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.notmpl.make:
	  Add new makefile for tmpl-less build.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* autogen.sh:
	  Accepts automake 1.10 too. Fixes #459225

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Make the tmpl-less build work.

	* tests/gtk-doc.make:
	  Switch again to the tmpl-less build.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	patch by: Rouslan Solomakhin <rouslan@solomakhin.net>

	* configure.in:
	  Fix the build.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* tests/gtk-doc.make:
	  Revert fix for #433338 and reopen bug. Breaks if file is not there,
	  e.g. if --rebuild-types is used.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make: