@@ -1,5 +1,12 @@
 2007-08-12  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkdb.in:
+	* gtkdoc-mktmpl.in:
+	  Handle "unsigned long|unsigned short|signed long|signed short".
+	  Fixes #445693.
+
+2007-08-12  Stefan Kost  <ensonic@users.sf.net>
+
 	* Makefile.am:
 	* configure.in:
 	* gtkdoc-check:
